--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
-SQLAlchemy==2.0.20
 Flask-SQLAlchemy==3.0.5
 Flask-Migrate==4.0.4
+Flask-WTF==1.1.1
 MarkupSafe==2.1.3
 requests==2.31.0
+SQLAlchemy==2.0.20
