--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+dnspython==2.4.2
+email-validator=2.0.0
 Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
+Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
+Jinja2==3.1.2
 MarkupSafe==2.1.3
 requests==2.31.0
 SQLAlchemy==2.0.20
+Werkzeug==2.3.7
