--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
+Gunicorn==21.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.3
 requests==2.31.0
