--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-WTF==1.1.1
 Gunicorn==21.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.3
+psycopg2==2.8.4
 requests==2.31.0
 SQLAlchemy==2.0.20
 Werkzeug==2.3.8
