--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run integration tests
       run: |
-        python3 -u -m unittest tests/
+        git checkout create-pr-workflows
