--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,7 @@ jobs:
         pip install pylint
         pip install -r requirements.txt
     - name: Run integration tests
+      env:
+          DATABASE_URL = ${{ secrets.DATABASE_URL }}
       run: |
         python3 -m unittest discover tests/
