--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install -r requirements.txt
-    - name: Run integration tests
+    - name: Create sandbox db
       env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      run: |
+        flask db init
+        flask db migrate
+        flask db upgrade
+    - name: Run integration tests
       run: |
         python3 -m unittest discover tests/
