--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,11 @@
-name: Pylint
+name: Test
 
 on:
   pull_request:
     branches: [main]
+
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -21,6 +24,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install -r requirements.txt
-    - name: Analysing the code with pylint
+    - name: Run integration tests
+      env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: |
-        pylint $(git ls-files '*.py')
+        flask db init
+        flask db migrate
+        flask db upgrade
+        python3 -m unittest discover tests/
