--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask==2.3.3
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.5
-Flask-Testing-0.8.1
+Flask-Testing==0.8.1
 Flask-WTF==1.1.1
 Gunicorn==21.2.0
 Jinja2==3.1.3
