--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,5 +26,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run security tests
       run: |
-        echo "PYTHONPATH=home/runner/work/web-app-assignment/web-app-assignment" >> "$GITHUB_ENV"
-        python3 tests/test_security.py
+        python3 -m unittest discover tests/
