--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,4 +26,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run security tests
       run: |
-        python3 -m unittest discover tests/
+        python3 -m unittest discover security_tests/
