--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -25,6 +25,8 @@ jobs:
         pip install pylint
         pip install -r requirements.txt
     - name: Run security tests
+      env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: |
         flask db init
         flask db migrate
