--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Integration Tests
 
 on:
   pull_request:
@@ -31,4 +31,4 @@ jobs:
         flask db init
         flask db migrate
         flask db upgrade
-        python3 -m unittest discover tests/
+        python3 -m unittest discover integration_tests/
